<resources>
    <string name="app_name">Kodik</string>
    <string name="splash_screen_description">Проверь свои знания</string>
    <string name="registration_text_view">РЕГИСТРАЦИЯ</string>
    <string name="registration_name_text_view">Имя</string>
    <string name="registration_email_text_view">E-mail</string>
    <string name="registration_password_text_view">Пароль</string>
    <string name="registration_password_repeat_text_view">Ещё раз пароль</string>
    <string name="registration_button_text">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="login_registration_needed"><u>Зарегистрироваться</u></string>
    <string name="login_button">Войти</string>
    <string name="login_text">Вход</string>
    <string name="splash_intro_text">Привет! Мы уже знакомы?\n\n Войди или зарегистрируйся прямо сейчас ;)</string>
    <string name="registration_already_have_acc"><u>Уже есть аккаунт</u></string>
    <string name="home_courses_sample">PYTHON</string>
    <string name="courses_title">МОИ КУРСЫ</string>
    <string name="home_title">КУРСЫ</string>
    <string name="notifications_title">УВЕДОМЛЕНИЯ</string>
    <string name="notification_text">Поздравляем! Ты получил награду \"<b>Знаток</b>\"!</string>
    <string name="profile_title">МОЙ ПРОФИЛЬ</string>
    <string name="profile_change_photo">Изменить фото</string>
    <string name="profile_data">Данные</string>
    <string name="profile_change">Изменить</string>
    <string name="profile_exit">Выйти</string>
    <string name="profile_my_trophy">Мои награды</string>
    <string name="profile_trophy_sample">НАГРАДА</string>
    <string name="lesson_card_button">Дальше</string>
    <string name="wrong_answer">Неправильно! \nПопробуй ещё:)</string>
    <string name="correct_answer">Выполнено! Молодец!</string>
    <string name="locked_lesson">Эта тема пока недоступна\nизучи предыдущие, чтобы открыть её:)</string>
    <string name="themes_of_course">ТЕМЫ КУРСА</string>
    <string name="add_to_my_courses">Добавить в Мои курсы</string>
    <string name="start_now">НАЧАТЬ СЕЙЧАС</string>
    <string name="courses_added_to_list">Курс успешно добавлен в список твоих курсов;)</string>
</resources>
