<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splashLayoutAfter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SplashActivity">

    <TextView
        android:id="@+id/splash_text_view"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/rubik_bold"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textAppearance="@style/RegistrationTheme"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/splash_intro"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/rubik"
        android:gravity="center_horizontal"
        android:lineHeight="24dp"
        android:text="@string/splash_intro_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_text_view"
        tools:targetApi="p" />

    <Button
        android:id="@+id/splash_reg_button"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/ef_round_corner_button_green_gradient"
        android:fontFamily="@font/rubik"
        android:text="@string/registration_text_view"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/splash_login_button"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/ef_round_corner_button_empty"
        android:fontFamily="@font/rubik"
        android:text="@string/login_button"
        android:textAlignment="center"
        android:textColor="@color/registration_main_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_reg_button" />

</androidx.constraintlayout.widget.ConstraintLayout>